PR c++/47208

gcc/cp/

	PR c++/47208
	* pt.c (do_auto_deduction): Do not mention error_mark_node in
	diagnostics.
	* semantics.c (finish_id_expression): Do not pass erroneous decl
	to decl_constant_var_p.

gcc/testsuite/

	PR c++/47208
	* g++.dg/cpp0x/auto21.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@170268 138bc75d-0d04-0410-961f-82ee72b054a4